# gddb

./: .gitignore  Cargo.toml  LICENSE  README.md  test.tinydb
.github/workflows/: cross-compile.yml
src/: database.rs  error.rs  gddb.rs  lib.rs  record.rs
