[package]
name = "gddb"
description = "A small-footprint, superfast database ✨"
version = "0.1.0"
repository = "https://github.com/patchfx/gddb"
license = "MIT"
readme = "README.md"
authors = ["Richard Patching <richard@justaddpixels.com>"]
edition = "2018"

[lib]
crate-type=["cdylib"]

[dependencies]
bincode = "1.3"
gdnative = "0.9"
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"]  }

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.hashbrown]
version = "0.11"
features = ["serde"]
