[package]
name = "gddb"
description = "GDDB is a superfast in-memory database designed for use in Godot."
version = "0.3.0"
repository = "https://github.com/patchfx/gddb"
license = "MIT"
readme = "README.md"
authors = ["Richard Patching <richard@justaddpixels.com>"]
edition = "2021"

[lib]
crate-type=["cdylib"]

[dependencies]
bincode = "1.3"
gdnative = "0.10.0"
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"]  }

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.hashbrown]
version = "0.12"
features = ["serde"]
