[package]
name = "gddb"
description = "GDDB is a superfast in-memory database designed for use in Godot."
version = "0.3.1"
repository = "https://github.com/patchfx/gddb"
license = "MIT"
readme = "README.md"
authors = ["Richard Patching <richard@justaddpixels.com>"]
edition = "2021"

[lib]
crate-type=["cdylib", "lib"]

[dependencies]
bincode = "1.3"
gdnative = "0.11.0"
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"]  }

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.hashbrown]
version = "0.13.1"
features = ["serde"]
